--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = aVkqlhv9K0UP5:V5i><0Vv]9xTvhC/MeIt]rIdjvdOdmgEVabSt=X/nbdxl1H4b8
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -214,7 +214,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  #enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
@@ -283,7 +283,7 @@ play.filters {
   # This is useful to prevent cache poisoning attacks.
   hosts {
     # Allow requests to localhost on ports 9000 (dev) and 19001 (default test) ports
-    allowed = ["localhost:9000", "localhost:19001"]
+    allowed = ["localhost:9000", "localhost:19001", "adventskalender2018.scalingo.io", "adventskalender2018.com"]
   }
 }
 
